# web-server-2025-02-23

./: README.md  app.py  data  pyproject.toml
templates/: index.html
